--- a/.cordova/config.json
+++ b/.cordova/config.json
@@ -1,9 +1,1 @@
-{
-    "lib": {
-        "www": {
-            "id": "com.brian.moment",
-            "version": "3.4.0",
-            "uri": "https://github.com/phonegap/phonegap-app-hello-world/archive/3.4.0.tar.gz"
-        }
-    }
-}
+{"lib":{"www":{"id":"com.brian.moment","version":"3.4.0","uri":"https://github.com/phonegap/phonegap-app-hello-world/archive/3.4.0.tar.gz"}},"phonegap":{"id":906088}}
